--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -137,12 +137,13 @@ section{
     margin: 5px 10%; 
     width: 80%;
 }
-.text-area{
+.panel{
     margin: 0 10%;
     width: 80%;
     height: 90px;
     background-color: white;
     text-align: left;
+    overflow: auto;
 }
 .msg-input{
     width: 60%;
